/cp 2019-03-25  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/84661
	PR c++/85013
	* parser.c (cp_parser_binary_expression): Don't call cp_fully_fold
	to undo the disabling of warnings.

/testsuite
2019-03-25  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/84661
	PR c++/85013
	* g++.dg/concepts/pr84661.C: New.
	* g++.dg/torture/pr85013.C: Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@269923 138bc75d-0d04-0410-961f-82ee72b054a4